--- a/css/style.css
+++ b/css/style.css
@@ -1,52 +1,97 @@
-.header{
-    background-color: #e74c3c;
-    color: white
+
+.nav{
+    background: #0f5132;
+    overflow: hidden;
+    color: white;
 }
-ul{
+ul li {
     list-style: none;
-    margin-top: 12px
-}
-ul li{
     display: inline-block;
 }
-ul li a{
+li a{
     color: white;
     text-decoration: none;
-        padding: 5px 10px;
-
+    padding: 5px 10px
 }
-ul li a:hover{
+li a:hover{
     color: white;
-    background-color: #b72313;
-    padding: 5px 10px;
-    
+    background: #052214;
+    border-radius: 5px;
 }
-.logo{
-    font-size: 2rem;
-    display: inline-block;
-}
-
-.banner{
-    color: white;
-    background-image: url(/img/background.jpg);
+.main-body{
+    background: url(/background.jpg);
+    background-repeat: no-repeat;
     background-size: cover;
-    height: 400px
+    background-size: contain
+    color: white
 }
-.banner-title h2{
-    background: rgba(255,255,255,0.8);
+.main-body h1{
+    background: #dee2e6;
+    padding: 5px;
     display: inline-block;
+    margin-bottom: 0px;
+    color: darkslategray;
+}
+.main-body p{
+    background: gray;
+    padding: 5px;
+}
+.container-section{
+    text-align: center;
+}
+.container-section i{
+    font-size: 70px;
+    color: green;
     padding: 10px;
+}
+h2{
+    text-align:center;
+}
+.hr{
+    height: 3px;
+    width: 100px;
+    background: green;
+    margin: auto;
+}
+.container-section .container{
+    margin-top: 30px;;
+}
+.testimonial{
+    background: url(../office-865091_1920.jpg);
+    color: white;
+    text-align: justify-all
+}
+.client{
+    border-radius: 50% 50%;
+    margin: auto;
+    margin-left: 40%;
+}
+.testimonial-row{
+    margin-bottom: 50px;
+}
+.recent i{
+    font-size: 15px;
     color: black;
-    margin: 0;
+    padding: 0
 }
-.banner .container{
-    margin-top: 50px
+.recent h4{
+    color: green;
+    margin-top: 15px;
 }
-p.lead{
-    background-color: rgba(231,76,60,0.7);
-    padding: 10px;
+.recent a{
+color: darkgreen;
+font-size: 20px}
+.footer p , h5{
+text-align: left;
+}
+.footer{
+    background: rgb(44,63,86);
+    color: white;
 }
 hr{
-  width: 100px;
-    height: 100px;
+    width: 50px;
+    padding: 0px;
+    margin: 0px;
+    color: white;
+    background: white;
 }
